moved progress bar styling to standard main.less added css to handle modal headers, titles and modal-body fixed progress bar not showing in attachment download.

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -213,3 +213,14 @@ p.hyphenate{
 .serif{
 	font-family: @font-family-serif;
 }
+
+.lava-modal-header{
+	.modal-heading{
+		line-height: 2.8em;
+		padding-left: 1.3em;
+	}
+}
+
+.lava-modal-content{
+	padding-top: @filter-height + 25px;
+}
